[tool.ruff]
line-length = 200

[tool.poetry]
name = "fluentvalidation"
version = "0.1.0"
description = "A popular .NET validation library for building strongly-typed validation rules, rewritten in python"
authors = ["p-hzamora <p.hzamora@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
